--- a/weitaixin/src/main/res/layout/activity_ask_doctor.xml
+++ b/weitaixin/src/main/res/layout/activity_ask_doctor.xml
@@ -11,12 +11,12 @@
 
     <LinearLayout
         android:id="@+id/ll_one"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:background="@color/white0"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:padding="14dp"
-        android:layout_height="wrap_content">
+        android:background="@color/white0"
+        android:orientation="vertical"
+        android:padding="14dp">
 
         <EditText
             android:id="@+id/etAskDoctorText"
@@ -29,6 +29,31 @@
             android:maxLength="200"
             android:textColor="@color/black1"
             android:textSize="@dimen/font_normal" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvPurpose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text=""
+                android:textColor="@color/gray7"
+                android:textSize="@dimen/font_normal" />
+
+            <TextView
+                android:id="@+id/tvFeeling"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/gray7"
+                android:textSize="@dimen/font_normal" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvAskDoctorTextCount"
@@ -62,8 +87,8 @@
         android:id="@+id/tvOtherInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:layout_marginTop="10dp"
+        android:gravity="center"
         android:text="共0次，已咨询0次，剩余0次"
         android:textColor="@color/gray7"
         android:textSize="@dimen/font_normal" />
