修改 关于  增加 监护常识页面

--- a/weitaixinpro/src/main/res/layout/item_monitor.xml
+++ b/weitaixinpro/src/main/res/layout/item_monitor.xml
@@ -31,6 +31,7 @@
             android:src="@drawable/shape_white_circle"/>
 
         <TextView
+            android:id="@+id/tv_begin"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_alignParentRight="true"
