--- a/weitaixinpro/src/main/res/layout/monitor_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/monitor_fragment.xml
@@ -82,9 +82,17 @@
             android:text="已检测"/>
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/lv_monitor"
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/pullToRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:cacheColorHint="#00000000"
+        android:divider="@null"
+        android:fadingEdge="none"
+        android:fastScrollEnabled="false"
+        android:footerDividersEnabled="false"
+        android:headerDividersEnabled="false"
+        android:listSelector="#55FFFFFF"
+        android:smoothScrollbar="true"/>
 
 </LinearLayout>
