--- a/weitaixin/src/main/res/layout/item_pay_coupling_product.xml
+++ b/weitaixin/src/main/res/layout/item_pay_coupling_product.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="26dp"
         android:layout_marginTop="16dp"
-        android:text="微胎心耦合剂"
+        android:text=""
         android:textColor="@color/black0"
         android:textSize="@dimen/font12" />
 
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="26dp"
         android:layout_marginTop="16dp"
-        android:text="￥3213"
+        android:text=""
         android:textColor="@color/red0"
         android:textSize="@dimen/font16" />
 
@@ -42,19 +42,18 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginRight="10dp"
-            android:text="-"
+            android:text="—"
             android:textColor="@drawable/text_color_hei_selector"
-            android:textSize="@dimen/font50" />
+            android:textSize="@dimen/font34" />
 
         <TextView
             android:id="@+id/tvCountText"
-            android:layout_width="wrap_content"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:background="@drawable/corner_background_gray16"
+            android:gravity="center"
             android:paddingBottom="4dp"
-            android:paddingLeft="34dp"
-            android:paddingRight="34dp"
             android:paddingTop="4dp"
             android:text="1"
             android:textColor="@color/black0"
