--- a/weitaixin/src/main/res/values/colors.xml
+++ b/weitaixin/src/main/res/values/colors.xml
@@ -75,5 +75,6 @@
     <color name="text_content_color">#FF444444</color>
     <color name="text_subtitle_color">#FFA8A8A8</color>
 
+    <color name="navpage">#FFE1E8EB</color>
 
 </resources>
