--- a/weitaixinpro/src/main/res/layout/monitor_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/monitor_fragment.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -27,6 +27,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:padding="10dp"
                     android:text="未监测"/>
 
@@ -48,8 +49,9 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
                     android:padding="10dp"
-                    android:text="未监测"/>
+                    android:text="已监测"/>
 
                 <ImageView
                     android:id="@+id/iv_alreay_monitor"
@@ -63,7 +65,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="91dp"
+        android:layout_height="90dp"
         android:background="@color/white0"
         android:orientation="vertical">
 
@@ -72,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|bottom"
             android:text="海淀区第一妇幼保健"/>
 
         <TextView
@@ -80,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center"/>
+            android:gravity="top|center"/>
     </LinearLayout>
 
     <com.handmark.pulltorefresh.library.PullToRefreshListView
