--- a/weitaixinpro/src/main/res/layout/item_record.xml
+++ b/weitaixinpro/src/main/res/layout/item_record.xml
@@ -7,6 +7,7 @@
 
 
     <FrameLayout
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="74dp">
 
@@ -122,7 +123,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/bg_ask_doctor"
                     android:gravity="center"
-                    android:text="问医生"
+                    android:text="需上传"
                     android:textColor="@drawable/text_color_selector"/>
             </RelativeLayout>
         </RelativeLayout>
