--- a/weitaixinpro/src/main/res/layout/record_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/record_fragment.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/gray17"
               android:orientation="vertical">
 
     <include
@@ -13,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/head_title_id"
+        android:layout_marginTop="10dp"
         android:cacheColorHint="#00000000"
         android:divider="@null"
         android:fadingEdge="none"
