--- a/weitaixinpro/src/main/res/layout/settings_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/settings_fragment.xml
@@ -21,7 +21,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="23dp"
             android:singleLine="true"
-            android:text="监护设置"
+            android:text="@string/monitor_settings"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font_normal"/>
 
@@ -48,11 +48,12 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="23dp"
             android:singleLine="true"
-            android:text="宿主 ID"
+            android:text="@string/host_id"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
+            android:id="@+id/tv_host_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -75,11 +76,12 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="23dp"
             android:singleLine="true"
-            android:text="探头SN"
+            android:text="@string/index_sn"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
+            android:id="@+id/tv_index_sn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -102,11 +104,12 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="23dp"
             android:singleLine="true"
-            android:text="医院"
+            android:text="@string/hospital"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
+            android:id="@+id/tv_hospital"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -129,11 +132,12 @@
             android:layout_marginLeft="23dp"
             android:gravity="center"
             android:singleLine="true"
-            android:text="科室"
+            android:text="@string/department"
             android:textColor="@drawable/text_color_hei_selector"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
+            android:id="@+id/tv_department"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -156,11 +160,12 @@
             android:layout_marginLeft="23dp"
             android:gravity="center"
             android:singleLine="true"
-            android:text="版本"
+            android:text="@string/version"
             android:textColor="@drawable/text_color_hei_selector"
             android:textSize="@dimen/font_normal"/>
 
         <TextView
+            android:id="@+id/tv_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
