--- a/weitaixinpro/src/main/res/layout/item_set_system_guardian.xml
+++ b/weitaixinpro/src/main/res/layout/item_set_system_guardian.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="36dp"
+                android:layout_height="45dp"
                 android:background="@color/white0"
                 android:paddingBottom="4dp"
                 android:paddingTop="4dp">
@@ -14,7 +14,7 @@
         android:singleLine="true"
         android:text="5秒"
         android:textColor="@color/gray9"
-        android:textSize="@dimen/font12"/>
+        android:textSize="18sp"/>
 
     <ImageView
         android:id="@+id/tvState"
@@ -25,6 +25,5 @@
         android:layout_toRightOf="@id/tvTime"
         android:src="@drawable/select"
         android:textSize="@dimen/font26"/>
-
 
 </RelativeLayout>
