--- a/weitaixin/src/main/res/layout/activity_wo_information.xml
+++ b/weitaixin/src/main/res/layout/activity_wo_information.xml
@@ -212,7 +212,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="30dp"
                     android:singleLine="true"
-                    android:text="设备"
+                    android:text="未填"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/font_normal"/>
 
@@ -243,7 +243,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="30dp"
                     android:singleLine="true"
-                    android:text="所在地区"
+                    android:text="未填"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/font_normal"/>
 
@@ -274,7 +274,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="30dp"
                     android:singleLine="true"
-                    android:text="所在医院"
+                    android:text="未填"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/font_normal"/>
 
@@ -305,7 +305,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="30dp"
                     android:singleLine="true"
-                    android:text="主治医师"
+                    android:text="未填"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/font_normal"/>
 
