--- a/weitaixinpro/src/main/res/layout/activity_me_main_fragment.xml
+++ b/weitaixinpro/src/main/res/layout/activity_me_main_fragment.xml
@@ -85,7 +85,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我的"
+                android:text="设置"
                 android:textColor="@color/gray14"
                 android:textSize="12sp"/>
         </LinearLayout>
