--- a/weitaixin/src/main/res/layout/item_pay_rent_product.xml
+++ b/weitaixin/src/main/res/layout/item_pay_rent_product.xml
@@ -6,12 +6,12 @@
 
     <ImageView
         android:id="@+id/ivAddressImage"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_centerVertical="true"
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"
-        android:src="@drawable/pay_choose" />
+        android:src="@drawable/pay_choose_un" />
 
     <LinearLayout
         android:id="@+id/llOne1Function"
@@ -25,6 +25,7 @@
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:text="多萨达as"
             android:textColor="@color/black0"
             android:textSize="@dimen/font12" />
@@ -37,15 +38,17 @@
         android:id="@+id/llTwoFunction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="12dp"
         android:layout_below="@id/llOne1Function"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/ivAddressImage"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="12dp">
 
         <TextView
+            android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:singleLine="true"
             android:text="*从租凭日直至归还设备，共计600元"
             android:textColor="@color/gray7"
             android:textSize="@dimen/font10" />
@@ -54,14 +57,14 @@
     </LinearLayout>
 
 
-
     <TextView
         android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="26dp"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="26dp"
+        android:layout_marginTop="16dp"
+        android:singleLine="true"
         android:text="￥3213"
         android:textColor="@color/red0"
         android:textSize="@dimen/font16" />
