--- a/weitaixin/src/main/res/layout/activity_pay_rent_information.xml
+++ b/weitaixin/src/main/res/layout/activity_pay_rent_information.xml
@@ -110,7 +110,7 @@
             android:paddingBottom="16dp"
             android:paddingLeft="16dp"
             android:paddingTop="16dp"
-            android:text="选医院"
+            android:text="选医生"
             android:textColor="@color/gray12"
             android:textSize="@dimen/font10" />
 
