--- a/weitaixin/src/main/res/layout/item_pay_goods_list.xml
+++ b/weitaixin/src/main/res/layout/item_pay_goods_list.xml
@@ -12,7 +12,7 @@
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:text="【待收货】"
+        android:text=""
         android:textColor="@color/font_color"
         android:textSize="@dimen/font12" />
 
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
-        android:text="￥2343"
+        android:text=""
         android:textColor="@color/red0"
         android:textSize="@dimen/font12" />
 
