--- a/weitaixin/src/main/res/drawable/text_color_hei_selector.xml
+++ b/weitaixin/src/main/res/drawable/text_color_hei_selector.xml
@@ -2,5 +2,5 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/green0" android:state_pressed="true"/>
-    <item android:color="@color/gray20"/>
+    <item android:color="@color/black0"/>
 </selector>
